# hudson_platecrane_module

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  compose.yaml  example.env  pyproject.toml  requirements.txt  setup.cfg  setup.py
platecrane_driver/: error_codes.py  plate_handler.py  platecrane_driver.py  platecrane_joint_limits.py  platecrane_locations.py  sciclops_driver.py  sciclops_driver_serial.py  serial_port.py  setup.py  stack_resources.json
scripts/: platecrane_rest_client.py  sciclops_rest_client.py
src/: hudson_platecrane_node.py  platecrane_rest_node.py  sciclops_rest_node.py
src/platecrane_driver/: __init__.py  config.py  error_codes.py  plate_resources.json  platecrane_driver.py  platecrane_joint_limits.py  platecrane_locations.py  resource_defs.py  resource_types.py  sciclops_driver.py  serial_port.py  test.py  types.py
tests/: test_module.py  test_serial.ipynb
tests/workcell_defs/: test_workcell.yaml
tests/workflow_defs/: test_sciclops_workflow.yaml
